--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -683,9 +683,9 @@
    "source": [
     "# Group by spending ranges\n",
     "per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()\n",
-    "spending_math_scores = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"Average Math Score\"]\n",
-    "spending_reading_scores = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"Average Reading Score\"]\n",
-    "spending_passing_math = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"% Passing Math\"]\n",
+    "spending_math_scores =     per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"Average Math Score\"]\n",
+    "spending_reading_scores =  per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"Average Reading Score\"]\n",
+    "spending_passing_math =    per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"% Passing Math\"]\n",
     "spending_passing_reading = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"% Passing Reading\"]\n",
     "overall_passing_spending = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"% Overall Passing\"]"
    ]
@@ -745,6 +745,110 @@
     "spending_summary_df[\"% Overall Passing\"] = spending_summary_df[\"% Overall Passing\"].map(\"{:.0f}%\".format)\n",
     "\n",
     "spending_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analysis of student performance w/r/t total school population\n",
+    "size_bins = [0, 1000, 2000, 5000]\n",
+    "group_names = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]\n",
+    "per_school_summary_df[\"School Size\"] = pd.cut(per_school_summary_df[\"Total Students\"], size_bins, labels=group_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find summary stats for each size grouping\n",
+    "# Average Math Score, Average Reading Score, % Passing Math/Reading/Overall\n",
+    "size_math_scores =     per_school_summary_df.groupby([\"School Size\"]).mean()[\"Average Math Score\"]\n",
+    "size_reading_scores =  per_school_summary_df.groupby([\"School Size\"]).mean()[\"Average Reading Score\"]\n",
+    "size_passing_math =    per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Passing Math\"]\n",
+    "size_passing_reading = per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Passing Reading\"]\n",
+    "size_overall_passing = per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Overall Passing\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                    Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Size                                                                     \n",
+       "Small (<1000)                83.821598              83.929843       93.550225   \n",
+       "Medium (1000-2000)           83.374684              83.864438       93.599695   \n",
+       "Large (2000-5000)            77.746417              81.344493       69.963361   \n",
+       "\n",
+       "                    % Passing Reading  % Overall Passing  \n",
+       "School Size                                               \n",
+       "Small (<1000)               96.099437          89.883853  \n",
+       "Medium (1000-2000)          96.790680          90.621535  \n",
+       "Large (2000-5000)           82.766634          58.286003  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n    </tr>\n    <tr>\n      <th>School Size</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Small (&lt;1000)</th>\n      <td>83.821598</td>\n      <td>83.929843</td>\n      <td>93.550225</td>\n      <td>96.099437</td>\n      <td>89.883853</td>\n    </tr>\n    <tr>\n      <th>Medium (1000-2000)</th>\n      <td>83.374684</td>\n      <td>83.864438</td>\n      <td>93.599695</td>\n      <td>96.790680</td>\n      <td>90.621535</td>\n    </tr>\n    <tr>\n      <th>Large (2000-5000)</th>\n      <td>77.746417</td>\n      <td>81.344493</td>\n      <td>69.963361</td>\n      <td>82.766634</td>\n      <td>58.286003</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 131
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "size_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : size_math_scores,\n",
+    "          \"Average Reading Score\": size_reading_scores,\n",
+    "          \"% Passing Math\": size_passing_math,\n",
+    "          \"% Passing Reading\": size_passing_reading,\n",
+    "          \"% Overall Passing\": size_overall_passing})\n",
+    "\n",
+    "size_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                   Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Size                                                                  \n",
+       "Small (<1000)                    83.8                  83.9             94   \n",
+       "Medium (1000-2000)               83.4                  83.9             94   \n",
+       "Large (2000-5000)                77.7                  81.3             70   \n",
+       "\n",
+       "                   % Passing Reading % Overall Passing  \n",
+       "School Size                                             \n",
+       "Small (<1000)                     96                90  \n",
+       "Medium (1000-2000)                97                91  \n",
+       "Large (2000-5000)                 83                58  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n    </tr>\n    <tr>\n      <th>School Size</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Small (&lt;1000)</th>\n      <td>83.8</td>\n      <td>83.9</td>\n      <td>94</td>\n      <td>96</td>\n      <td>90</td>\n    </tr>\n    <tr>\n      <th>Medium (1000-2000)</th>\n      <td>83.4</td>\n      <td>83.9</td>\n      <td>94</td>\n      <td>97</td>\n      <td>91</td>\n    </tr>\n    <tr>\n      <th>Large (2000-5000)</th>\n      <td>77.7</td>\n      <td>81.3</td>\n      <td>70</td>\n      <td>83</td>\n      <td>58</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 132
+    }
+   ],
+   "source": [
+    "# Formatting.\n",
+    "size_summary_df[\"Average Math Score\"] = size_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "size_summary_df[\"Average Reading Score\"] = size_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "size_summary_df[\"% Passing Math\"] = size_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "size_summary_df[\"% Passing Reading\"] = size_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "size_summary_df[\"% Overall Passing\"] = size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df"
    ]
   },
   {
